# pyscaffoldext-ClickStart

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.md  authors.md  conf.py  index.md  index.rst  license.md  makefile-dollar-escaping-fix.md  readme.md  requirements.txt  usage.md
src/pyscaffoldext/clickstart/: __init__.py  extension.py  tests_structure.py
src/pyscaffoldext/clickstart/templates/: .pre-commit-config.yaml.template  .readthedocs.yml.template  AUTHORS.md.template  CONTRIBUTING.md.template  Makefile.py  Makefile.template  README.md.template  api.template  cli.template  click_skeleton.template  conftest.template  pyproject.toml.template  runner.template  script.template
src/pyscaffoldext/clickstart/templates/.github/workflows/: ci.yml.template
src/pyscaffoldext/clickstart/templates/docs/: conf.py.template  index.md.template  requirements.txt.template
tests/: conftest.py  helpers.py  test_custom_extension.py  test_extension_unit.py  test_generated_content.py  test_templates.py
